--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
-<head>
-</head>
-<body>
-    Hello World!
-</body>
+<html>
+    <head>
+    </head>
+    <body>
+        Hello World!
+    </body>
+</html>
